# advent

./: 19.txt  ok.cabal  package.yaml  stack.yaml
src/: .gitignore  21.hs  22.hs  Main-original.hs  S22.hs  Vigenere.hs
src/2015/: 23.hs  AStar.hs  S22.hs
src/2016/: AStar.hs  D1.hs  D10.hs  D10Input.hs  D11.hs  D11Input.hs  D12.hs  D12Input.hs  D13.hs  D13Input.hs  D14.hs  D14Input.hs  D15.hs  D15Input.hs  D16.hs  D17.hs  D18.hs  D19.hs  D2.hs  D20.hs  D20Input.hs  D22Input.hs  D23.hs  D23Input.hs  D24Input.hs  D25Input.hs  D2Input.hs  D3.hs  D3Input.hs  D4.hs  D4Input.hs  D5.hs  D5Input.hs  D6.hs  D6Input.hs  D7.hs  D7Input.hs  D8.hs  D8Input.hs  D9.hs  (+4 more)
