name:                ok
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ok#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable "a"
  hs-source-dirs:      src
  main-is: Main.hs
  build-depends:       PSQueue
                     , aeson
                     , arithmoi
                     , array >= 0.5.1.0
                     , attoparsec
                     , base
                     , base-prelude
                     , base16-bytestring
                     , base64-bytestring
                     , bytestring
                     , containers
                     , cryptohash
                     , ghc-prim >= 0.4.0.0
                     , lens
                     , lens-aeson
                     , monad-loops >= 0.4.3
                     , multimap
                     , random >= 1.1
                     , random-shuffle
                     , scientific >= 0.3.4.2
                     , split
                     , text >= 1.2.1.3
                     , unordered-containers >= 0.2.5.1
                     , vector >= 0.10.12.3
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude,
                       OverloadedStrings
  ghc-options:  -O2
